@@ -13,6 +13,10 @@
    - dtucker@cvs.openbsd.org 2005/05/26 09:08:12
      [ssh-keygen.c]
      uint32_t -> u_int32_t for consistency; ok djm@
+   - djm@cvs.openbsd.org 2005/05/27 08:30:37
+     [ssh.c]
+     fix -O for cases where no ControlPath has been specified or socket at
+     ControlPath is not contactable; spotted by and ok avsm@
 
 20050531
  - (dtucker) [contrib/aix/pam.conf] Correct comments.  From davidl at
@@ -2661,4 +2665,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.3806 2005/06/01 13:02:25 dtucker Exp $
+$Id: ChangeLog,v 1.3807 2005/06/01 13:08:51 dtucker Exp $
